tests/invalid_inputs/sema/continue_level_too_big.cpp
int main() {
	while(true)
		continue 2;
}
